fix nav underline on safari

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -14,6 +14,8 @@
   font-size: 2rem;
 }
 .link {
+  display: inline-block;
+  position: relative;
   color: var(--font-color);
   font-size: 1.6rem;
 }
@@ -24,19 +26,27 @@
 .link:focus {
   color: var(--main-font-color);
 }
-.selected {
-  padding-bottom: 1.6rem;
+.link.selected {
   color: var(--main-font-color);
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  border-bottom: 2px solid;
+}
+.link.selected::after {
+  content: "";
+  margin-bottom: -1.6rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: inline-block;
+  width: 100%;
+  border-bottom: 3px solid;
   border-image: linear-gradient(
-      270deg,
-      var(--gradient-from-color) 0%,
-      var(--gradient-to-color) 96.35%
-    )
-    100% 1;
+    270deg,
+    var(--gradient-from-color) 0%,
+    var(--gradient-to-color) 96.35%
+  );
+  border-image-slice: 1;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
 }
 @media (max-width: 700px) {
   .navbar {
