--- a/components/Tree/TreeNodeDetails/BioNavItem/BioNavItem.module.css
+++ b/components/Tree/TreeNodeDetails/BioNavItem/BioNavItem.module.css
@@ -1,6 +1,7 @@
 .navItem {
   width: fit-content;
   padding-bottom: 1.6rem;
+  position: relative;
   font-size: 1.6rem;
   color: var(--font-color);
   cursor: pointer;
@@ -13,18 +14,26 @@
 .navItem:not(:last-child) {
   margin-right: 60px;
 }
-.selected {
+.navItem.selected {
   color: var(--main-font-color);
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  border-bottom: 2px solid;
+}
+.navItem.selected::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: inline-block;
+  width: 100%;
+  border-bottom: 3px solid;
   border-image: linear-gradient(
-      270deg,
-      var(--gradient-from-color) 0%,
-      var(--gradient-to-color) 96.35%
-    )
-    100% 1;
+    270deg,
+    var(--gradient-from-color) 0%,
+    var(--gradient-to-color) 96.35%
+  );
+  border-image-slice: 1;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
 }
 
 @media (max-width: 700px) {
